// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CaRegisterApi integration test 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters8e4018af5a7d0d7e44aa8d5f66efe41da068f3ade9c4458fe144feb13cabcc5eArtifactHashE5AB9CD1": Object {
      "Description": "Artifact hash for asset \\"8e4018af5a7d0d7e44aa8d5f66efe41da068f3ade9c4458fe144feb13cabcc5e\\"",
      "Type": "String",
    },
    "AssetParameters8e4018af5a7d0d7e44aa8d5f66efe41da068f3ade9c4458fe144feb13cabcc5eS3Bucket68AC9DE2": Object {
      "Description": "S3 bucket for asset \\"8e4018af5a7d0d7e44aa8d5f66efe41da068f3ade9c4458fe144feb13cabcc5e\\"",
      "Type": "String",
    },
    "AssetParameters8e4018af5a7d0d7e44aa8d5f66efe41da068f3ade9c4458fe144feb13cabcc5eS3VersionKeyE214CDF3": Object {
      "Description": "S3 key for asset version \\"8e4018af5a7d0d7e44aa8d5f66efe41da068f3ade9c4458fe144feb13cabcc5e\\"",
      "Type": "String",
    },
    "AssetParametersd48ece599f4dd60990c9e29430b4e102098d51b3624cfb682b3205d20d49a246ArtifactHash793064ED": Object {
      "Description": "Artifact hash for asset \\"d48ece599f4dd60990c9e29430b4e102098d51b3624cfb682b3205d20d49a246\\"",
      "Type": "String",
    },
    "AssetParametersd48ece599f4dd60990c9e29430b4e102098d51b3624cfb682b3205d20d49a246S3BucketB0660989": Object {
      "Description": "S3 bucket for asset \\"d48ece599f4dd60990c9e29430b4e102098d51b3624cfb682b3205d20d49a246\\"",
      "Type": "String",
    },
    "AssetParametersd48ece599f4dd60990c9e29430b4e102098d51b3624cfb682b3205d20d49a246S3VersionKeyECC1B024": Object {
      "Description": "S3 key for asset version \\"d48ece599f4dd60990c9e29430b4e102098d51b3624cfb682b3205d20d49a246\\"",
      "Type": "String",
    },
    "AssetParameterse89b1c00e77c8793aad6bd1660d0eace9b1ab105bc71c531cdcb543a08d14353ArtifactHash94611A50": Object {
      "Description": "Artifact hash for asset \\"e89b1c00e77c8793aad6bd1660d0eace9b1ab105bc71c531cdcb543a08d14353\\"",
      "Type": "String",
    },
    "AssetParameterse89b1c00e77c8793aad6bd1660d0eace9b1ab105bc71c531cdcb543a08d14353S3BucketDA921F44": Object {
      "Description": "S3 bucket for asset \\"e89b1c00e77c8793aad6bd1660d0eace9b1ab105bc71c531cdcb543a08d14353\\"",
      "Type": "String",
    },
    "AssetParameterse89b1c00e77c8793aad6bd1660d0eace9b1ab105bc71c531cdcb543a08d14353S3VersionKey60222427": Object {
      "Description": "S3 key for asset version \\"e89b1c00e77c8793aad6bd1660d0eace9b1ab105bc71c531cdcb543a08d14353\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "JustInTimeRegistrationtestcaseCaRegistratortestcase40DBE3A2": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRoleDefaultPolicy816F422E",
        "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRole8F8171C3",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters8e4018af5a7d0d7e44aa8d5f66efe41da068f3ade9c4458fe144feb13cabcc5eS3Bucket68AC9DE2",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters8e4018af5a7d0d7e44aa8d5f66efe41da068f3ade9c4458fe144feb13cabcc5eS3VersionKeyE214CDF3",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters8e4018af5a7d0d7e44aa8d5f66efe41da068f3ade9c4458fe144feb13cabcc5eS3VersionKeyE214CDF3",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "BUCKET_NAME": Object {
              "Fn::ImportValue": "another-stack:ExportsOutputRefuserProvidedBucket2349EF2D343936C6",
            },
            "BUCKET_PREFIX": "test",
            "DEIVCE_ACTIVATOR_QUEUE_URL": Object {
              "Ref": "JustInTimeRegistrationtestcaseReviewReceptortestcaseAB8D5DFE",
            },
            "DEIVCE_ACTIVATOR_ROLE_ARN": Object {
              "Fn::GetAtt": Array [
                "JustInTimeRegistrationtestcaseReviewReceptortestcaseReviewAcceptionRoletestcaseA3AF3CD4",
                "Arn",
              ],
            },
            "FETCH_ALL_VERIFIER_FUNCTION_ARN": Object {
              "Fn::GetAtt": Array [
                "JustInTimeRegistrationtestcaseVerifierRecordertestcaseFetchAllVerifierFunctiontestcase32598EAD",
                "Arn",
              ],
            },
          },
        },
        "Handler": "app.handler",
        "MemorySize": 256,
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRole8F8171C3",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 10,
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseCaRegistratortestcaseDE8814EE": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "iam:PassRole",
                "iot:RegisterCACertificate",
                "iot:GetRegistrationCode",
                "iot:CreateTopicRule",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseCaRegistratortestcaseDE8814EE",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRole8F8171C3",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRole8F8171C3": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRoleDefaultPolicy816F422E": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::ImportValue": "another-stack:ExportsOutputFnGetAttuserProvidedBucket2349EF2DArnA89CCA27",
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::ImportValue": "another-stack:ExportsOutputFnGetAttuserProvidedBucket2349EF2DArnA89CCA27",
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRoleDefaultPolicy816F422E",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRole8F8171C3",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseBE99699A": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleDefaultPolicyD0151B2D",
        "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleCD94255D",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameterse89b1c00e77c8793aad6bd1660d0eace9b1ab105bc71c531cdcb543a08d14353S3BucketDA921F44",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameterse89b1c00e77c8793aad6bd1660d0eace9b1ab105bc71c531cdcb543a08d14353S3VersionKey60222427",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameterse89b1c00e77c8793aad6bd1660d0eace9b1ab105bc71c531cdcb543a08d14353S3VersionKey60222427",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "app.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleCD94255D",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcasePolicyDeviceActivatortestcaseE698297C": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "iot:UpdateCertificate",
                "iot:DescribeCertificate",
                "lambda:InvokeFunction",
                "lambda:InvokeAsync",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseDeviceActivatortestcasePolicyDeviceActivatortestcaseE698297C",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleCD94255D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleCD94255D": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleDefaultPolicyD0151B2D": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "sqs:ReceiveMessage",
                "sqs:ChangeMessageVisibility",
                "sqs:GetQueueUrl",
                "sqs:DeleteMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "JustInTimeRegistrationtestcaseReviewReceptortestcaseAB8D5DFE",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleDefaultPolicyD0151B2D",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleCD94255D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseSqsEventSourceteststackJustInTimeRegistrationtestcaseReviewReceptortestcase3523F08BEF2BA3A9": Object {
      "Properties": Object {
        "BatchSize": 1,
        "EventSourceArn": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseReviewReceptortestcaseAB8D5DFE",
            "Arn",
          ],
        },
        "FunctionName": Object {
          "Ref": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseBE99699A",
        },
      },
      "Type": "AWS::Lambda::EventSourceMapping",
    },
    "JustInTimeRegistrationtestcaseReviewReceptortestcaseAB8D5DFE": Object {
      "DeletionPolicy": "Delete",
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "JustInTimeRegistrationtestcaseReviewReceptortestcaseReviewAcceptionRoletestcaseA3AF3CD4": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "iot.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "sqs:SendMessageBatch",
                    "sqs:SendMessage",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::GetAtt": Array [
                      "JustInTimeRegistrationtestcaseReviewReceptortestcaseAB8D5DFE",
                      "Arn",
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "SqsPushPolicy",
          },
        ],
        "RoleName": "ReviewAcceptionRoleName-test-case",
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseFetchAllVerifierFunctiontestcase32598EAD": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseVerifierRecordertestcaseFetchAllVerifierFunctiontestcaseServiceRole7DFF14F6",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersd48ece599f4dd60990c9e29430b4e102098d51b3624cfb682b3205d20d49a246S3BucketB0660989",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersd48ece599f4dd60990c9e29430b4e102098d51b3624cfb682b3205d20d49a246S3VersionKeyECC1B024",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersd48ece599f4dd60990c9e29430b4e102098d51b3624cfb682b3205d20d49a246S3VersionKeyECC1B024",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "VERIFIERS": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "{\\"test_verifier\\":\\"",
                  Object {
                    "Fn::ImportValue": "verifier-stack:ExportsOutputFnGetAtttestcase9BC7DE4DArn30A02383",
                  },
                  "\\"}",
                ],
              ],
            },
          },
        },
        "Handler": "app.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseVerifierRecordertestcaseFetchAllVerifierFunctiontestcaseServiceRole7DFF14F6",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseFetchAllVerifierFunctiontestcaseServiceRole7DFF14F6": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseFetchAllVerifierHttpFunctiontestcaseCBCDC5BE": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseVerifierRecordertestcaseFetchAllVerifierHttpFunctiontestcaseServiceRoleDefaultPolicy83962845",
        "JustInTimeRegistrationtestcaseVerifierRecordertestcaseFetchAllVerifierHttpFunctiontestcaseServiceRole14A00740",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersd48ece599f4dd60990c9e29430b4e102098d51b3624cfb682b3205d20d49a246S3BucketB0660989",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersd48ece599f4dd60990c9e29430b4e102098d51b3624cfb682b3205d20d49a246S3VersionKeyECC1B024",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersd48ece599f4dd60990c9e29430b4e102098d51b3624cfb682b3205d20d49a246S3VersionKeyECC1B024",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "FETCH_ALL_VERIFIER_FUNCTION_ARN": Object {
              "Fn::GetAtt": Array [
                "JustInTimeRegistrationtestcaseVerifierRecordertestcaseFetchAllVerifierFunctiontestcase32598EAD",
                "Arn",
              ],
            },
          },
        },
        "Handler": "app.httpHandler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseVerifierRecordertestcaseFetchAllVerifierHttpFunctiontestcaseServiceRole14A00740",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseFetchAllVerifierHttpFunctiontestcaseServiceRole14A00740": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseFetchAllVerifierHttpFunctiontestcaseServiceRoleDefaultPolicy83962845": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "JustInTimeRegistrationtestcaseVerifierRecordertestcaseFetchAllVerifierFunctiontestcase32598EAD",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseVerifierRecordertestcaseFetchAllVerifierHttpFunctiontestcaseServiceRoleDefaultPolicy83962845",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseVerifierRecordertestcaseFetchAllVerifierHttpFunctiontestcaseServiceRole14A00740",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;

exports[`CaRegisterApi integration test without providing verifiers 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters8e4018af5a7d0d7e44aa8d5f66efe41da068f3ade9c4458fe144feb13cabcc5eArtifactHashE5AB9CD1": Object {
      "Description": "Artifact hash for asset \\"8e4018af5a7d0d7e44aa8d5f66efe41da068f3ade9c4458fe144feb13cabcc5e\\"",
      "Type": "String",
    },
    "AssetParameters8e4018af5a7d0d7e44aa8d5f66efe41da068f3ade9c4458fe144feb13cabcc5eS3Bucket68AC9DE2": Object {
      "Description": "S3 bucket for asset \\"8e4018af5a7d0d7e44aa8d5f66efe41da068f3ade9c4458fe144feb13cabcc5e\\"",
      "Type": "String",
    },
    "AssetParameters8e4018af5a7d0d7e44aa8d5f66efe41da068f3ade9c4458fe144feb13cabcc5eS3VersionKeyE214CDF3": Object {
      "Description": "S3 key for asset version \\"8e4018af5a7d0d7e44aa8d5f66efe41da068f3ade9c4458fe144feb13cabcc5e\\"",
      "Type": "String",
    },
    "AssetParametersd48ece599f4dd60990c9e29430b4e102098d51b3624cfb682b3205d20d49a246ArtifactHash793064ED": Object {
      "Description": "Artifact hash for asset \\"d48ece599f4dd60990c9e29430b4e102098d51b3624cfb682b3205d20d49a246\\"",
      "Type": "String",
    },
    "AssetParametersd48ece599f4dd60990c9e29430b4e102098d51b3624cfb682b3205d20d49a246S3BucketB0660989": Object {
      "Description": "S3 bucket for asset \\"d48ece599f4dd60990c9e29430b4e102098d51b3624cfb682b3205d20d49a246\\"",
      "Type": "String",
    },
    "AssetParametersd48ece599f4dd60990c9e29430b4e102098d51b3624cfb682b3205d20d49a246S3VersionKeyECC1B024": Object {
      "Description": "S3 key for asset version \\"d48ece599f4dd60990c9e29430b4e102098d51b3624cfb682b3205d20d49a246\\"",
      "Type": "String",
    },
    "AssetParameterse89b1c00e77c8793aad6bd1660d0eace9b1ab105bc71c531cdcb543a08d14353ArtifactHash94611A50": Object {
      "Description": "Artifact hash for asset \\"e89b1c00e77c8793aad6bd1660d0eace9b1ab105bc71c531cdcb543a08d14353\\"",
      "Type": "String",
    },
    "AssetParameterse89b1c00e77c8793aad6bd1660d0eace9b1ab105bc71c531cdcb543a08d14353S3BucketDA921F44": Object {
      "Description": "S3 bucket for asset \\"e89b1c00e77c8793aad6bd1660d0eace9b1ab105bc71c531cdcb543a08d14353\\"",
      "Type": "String",
    },
    "AssetParameterse89b1c00e77c8793aad6bd1660d0eace9b1ab105bc71c531cdcb543a08d14353S3VersionKey60222427": Object {
      "Description": "S3 key for asset version \\"e89b1c00e77c8793aad6bd1660d0eace9b1ab105bc71c531cdcb543a08d14353\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "JustInTimeRegistrationtestcaseCaRegistratortestcase40DBE3A2": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRoleDefaultPolicy816F422E",
        "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRole8F8171C3",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters8e4018af5a7d0d7e44aa8d5f66efe41da068f3ade9c4458fe144feb13cabcc5eS3Bucket68AC9DE2",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters8e4018af5a7d0d7e44aa8d5f66efe41da068f3ade9c4458fe144feb13cabcc5eS3VersionKeyE214CDF3",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters8e4018af5a7d0d7e44aa8d5f66efe41da068f3ade9c4458fe144feb13cabcc5eS3VersionKeyE214CDF3",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "BUCKET_NAME": Object {
              "Fn::ImportValue": "another-stack:ExportsOutputRefuserProvidedBucket2349EF2D343936C6",
            },
            "BUCKET_PREFIX": "test",
            "DEIVCE_ACTIVATOR_QUEUE_URL": Object {
              "Ref": "JustInTimeRegistrationtestcaseReviewReceptortestcaseAB8D5DFE",
            },
            "DEIVCE_ACTIVATOR_ROLE_ARN": Object {
              "Fn::GetAtt": Array [
                "JustInTimeRegistrationtestcaseReviewReceptortestcaseReviewAcceptionRoletestcaseA3AF3CD4",
                "Arn",
              ],
            },
            "FETCH_ALL_VERIFIER_FUNCTION_ARN": Object {
              "Fn::GetAtt": Array [
                "JustInTimeRegistrationtestcaseVerifierRecordertestcaseFetchAllVerifierFunctiontestcase32598EAD",
                "Arn",
              ],
            },
          },
        },
        "Handler": "app.handler",
        "MemorySize": 256,
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRole8F8171C3",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 10,
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseCaRegistratortestcaseDE8814EE": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "iam:PassRole",
                "iot:RegisterCACertificate",
                "iot:GetRegistrationCode",
                "iot:CreateTopicRule",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseCaRegistratortestcaseDE8814EE",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRole8F8171C3",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRole8F8171C3": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRoleDefaultPolicy816F422E": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::ImportValue": "another-stack:ExportsOutputFnGetAttuserProvidedBucket2349EF2DArnA89CCA27",
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::ImportValue": "another-stack:ExportsOutputFnGetAttuserProvidedBucket2349EF2DArnA89CCA27",
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRoleDefaultPolicy816F422E",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRole8F8171C3",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseBE99699A": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleDefaultPolicyD0151B2D",
        "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleCD94255D",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameterse89b1c00e77c8793aad6bd1660d0eace9b1ab105bc71c531cdcb543a08d14353S3BucketDA921F44",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameterse89b1c00e77c8793aad6bd1660d0eace9b1ab105bc71c531cdcb543a08d14353S3VersionKey60222427",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameterse89b1c00e77c8793aad6bd1660d0eace9b1ab105bc71c531cdcb543a08d14353S3VersionKey60222427",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "app.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleCD94255D",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcasePolicyDeviceActivatortestcaseE698297C": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "iot:UpdateCertificate",
                "iot:DescribeCertificate",
                "lambda:InvokeFunction",
                "lambda:InvokeAsync",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseDeviceActivatortestcasePolicyDeviceActivatortestcaseE698297C",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleCD94255D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleCD94255D": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleDefaultPolicyD0151B2D": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "sqs:ReceiveMessage",
                "sqs:ChangeMessageVisibility",
                "sqs:GetQueueUrl",
                "sqs:DeleteMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "JustInTimeRegistrationtestcaseReviewReceptortestcaseAB8D5DFE",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleDefaultPolicyD0151B2D",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleCD94255D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseSqsEventSourceteststackJustInTimeRegistrationtestcaseReviewReceptortestcase3523F08BEF2BA3A9": Object {
      "Properties": Object {
        "BatchSize": 1,
        "EventSourceArn": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseReviewReceptortestcaseAB8D5DFE",
            "Arn",
          ],
        },
        "FunctionName": Object {
          "Ref": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseBE99699A",
        },
      },
      "Type": "AWS::Lambda::EventSourceMapping",
    },
    "JustInTimeRegistrationtestcaseReviewReceptortestcaseAB8D5DFE": Object {
      "DeletionPolicy": "Delete",
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "JustInTimeRegistrationtestcaseReviewReceptortestcaseReviewAcceptionRoletestcaseA3AF3CD4": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "iot.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "sqs:SendMessageBatch",
                    "sqs:SendMessage",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::GetAtt": Array [
                      "JustInTimeRegistrationtestcaseReviewReceptortestcaseAB8D5DFE",
                      "Arn",
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "SqsPushPolicy",
          },
        ],
        "RoleName": "ReviewAcceptionRoleName-test-case",
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseFetchAllVerifierFunctiontestcase32598EAD": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseVerifierRecordertestcaseFetchAllVerifierFunctiontestcaseServiceRole7DFF14F6",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersd48ece599f4dd60990c9e29430b4e102098d51b3624cfb682b3205d20d49a246S3BucketB0660989",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersd48ece599f4dd60990c9e29430b4e102098d51b3624cfb682b3205d20d49a246S3VersionKeyECC1B024",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersd48ece599f4dd60990c9e29430b4e102098d51b3624cfb682b3205d20d49a246S3VersionKeyECC1B024",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "VERIFIERS": "{}",
          },
        },
        "Handler": "app.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseVerifierRecordertestcaseFetchAllVerifierFunctiontestcaseServiceRole7DFF14F6",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseFetchAllVerifierFunctiontestcaseServiceRole7DFF14F6": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseFetchAllVerifierHttpFunctiontestcaseCBCDC5BE": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseVerifierRecordertestcaseFetchAllVerifierHttpFunctiontestcaseServiceRoleDefaultPolicy83962845",
        "JustInTimeRegistrationtestcaseVerifierRecordertestcaseFetchAllVerifierHttpFunctiontestcaseServiceRole14A00740",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersd48ece599f4dd60990c9e29430b4e102098d51b3624cfb682b3205d20d49a246S3BucketB0660989",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersd48ece599f4dd60990c9e29430b4e102098d51b3624cfb682b3205d20d49a246S3VersionKeyECC1B024",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersd48ece599f4dd60990c9e29430b4e102098d51b3624cfb682b3205d20d49a246S3VersionKeyECC1B024",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "FETCH_ALL_VERIFIER_FUNCTION_ARN": Object {
              "Fn::GetAtt": Array [
                "JustInTimeRegistrationtestcaseVerifierRecordertestcaseFetchAllVerifierFunctiontestcase32598EAD",
                "Arn",
              ],
            },
          },
        },
        "Handler": "app.httpHandler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseVerifierRecordertestcaseFetchAllVerifierHttpFunctiontestcaseServiceRole14A00740",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseFetchAllVerifierHttpFunctiontestcaseServiceRole14A00740": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseFetchAllVerifierHttpFunctiontestcaseServiceRoleDefaultPolicy83962845": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "JustInTimeRegistrationtestcaseVerifierRecordertestcaseFetchAllVerifierFunctiontestcase32598EAD",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseVerifierRecordertestcaseFetchAllVerifierHttpFunctiontestcaseServiceRoleDefaultPolicy83962845",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseVerifierRecordertestcaseFetchAllVerifierHttpFunctiontestcaseServiceRole14A00740",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;
